[package]
name = "gst-oboe-rs"
version = "0.1.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", package = "gstreamer" }
gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", package = "gstreamer-base" }
gst-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", package = "gstreamer-audio" }
once_cell = "1.0.0"
oboe = { git = "https://github.com/katyo/oboe-rs.git" }
